@@ -476,7 +476,8 @@ abstract class DatabaseUpdater {
 	public function updateRowExists( $key ) {
 		$row = $this->db->selectRow(
 			'updatelog',
-			'1',
+			# Bug 65813
+			'1 AS X',
 			array( 'ul_key' => $key ),
 			__METHOD__
 		);
